--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/service-worker": "~10.1.3",
     "ng-connection-service": "^1.0.4",
     "rxjs": "~6.5.5",
+    "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
