--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.7",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.7",
-    "@angular/compiler": "~11.0.7",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.2",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
     "@angular/core": "~11.0.7",
-    "@angular/forms": "~11.0.7",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.7",
-    "@angular/platform-browser-dynamic": "~11.0.7",
-    "@angular/router": "~11.0.7",
-    "@angular/service-worker": "~11.0.7",
-    "luxon": "^1.25.0",
+    "@angular/forms": "^11.0.9",
+    "@angular/material": "^11.2.2",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "@angular/service-worker": "^11.0.9",
+    "luxon": "^1.26.0",
     "ng-connection-service": "^1.0.4",
-    "rxjs": "~6.6.3",
+    "rxjs": "^6.6.6",
     "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
+    "@angular-devkit/build-angular": "^0.1100.7",
     "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.7",
-    "@types/jasmine": "~3.6.0",
+    "@angular/compiler-cli": "^11.0.9",
+    "@types/jasmine": "^3.6.4",
     "@types/jasminewd2": "~2.0.3",
-    "@types/luxon": "^1.25.0",
-    "@types/node": "^12.11.1",
+    "@types/luxon": "^1.26.1",
+    "@types/node": "^12.20.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -50,7 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5",
-    "webpack-bundle-analyzer": "^4.3.0"
+    "typescript": "^4.0.7",
+    "webpack-bundle-analyzer": "^4.4.0"
   }
 }
