--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.9",
-    "@angular/cdk": "^11.2.2",
+    "@angular/animations": "^11.2.6",
+    "@angular/cdk": "^11.2.5",
     "@angular/common": "^11.0.9",
     "@angular/compiler": "^11.0.9",
-    "@angular/core": "~11.0.7",
+    "@angular/core": "^11.2.6",
     "@angular/forms": "^11.0.9",
-    "@angular/material": "^11.2.2",
+    "@angular/material": "^11.2.5",
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "^11.0.9",
@@ -50,7 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.7",
+    "typescript": "^4.1.5",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
