--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:stats": "ng build --stats-json",
-    "build:analyze": "webpack-bundle-analyzer dist/c-metrics/stats.json"
+    "build:analyze": "webpack-bundle-analyzer dist/c-metrics/stats.json",
+    "pretty-quick": "pretty-quick",
+    "prettier": "prettier --write src/**/*.{ts,html,scss}"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +42,7 @@
     "@types/luxon": "^1.26.1",
     "@types/node": "^12.20.4",
     "codelyzer": "^6.0.0",
+    "husky": "^2.4.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
@@ -47,10 +50,18 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.5",
     "webpack-bundle-analyzer": "^4.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
