--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "sonar":"sonar-scanner",
     "build:stats": "ng build --stats-json",
     "build:analyze": "webpack-bundle-analyzer dist/c-metrics/stats.json",
     "pretty-quick": "pretty-quick",
