--- a/package.json
+++ b/package.json
@@ -16,41 +16,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.3",
-    "@angular/cdk": "^12.1.2",
-    "@angular/common": "^12.0.3",
-    "@angular/compiler": "^12.0.3",
-    "@angular/core": "^12.0.3",
-    "@angular/forms": "^12.0.3",
-    "@angular/material": "^12.1.2",
-    "@angular/platform-browser": "^12.0.3",
-    "@angular/platform-browser-dynamic": "^12.0.3",
-    "@angular/router": "^12.0.3",
-    "@angular/service-worker": "^12.0.3",
-    "luxon": "^1.26.0",
+    "@angular/animations": "^12.1.4",
+    "@angular/cdk": "^12.1.4",
+    "@angular/common": "^12.1.4",
+    "@angular/compiler": "^12.1.4",
+    "@angular/core": "^12.1.4",
+    "@angular/forms": "^12.1.4",
+    "@angular/material": "^12.1.4",
+    "@angular/platform-browser": "^12.1.4",
+    "@angular/platform-browser-dynamic": "^12.1.4",
+    "@angular/router": "^12.1.4",
+    "@angular/service-worker": "^12.1.4",
+    "luxon": "^1.28.0",
     "ng-connection-service": "^1.0.4",
     "rxjs": "^6.6.6",
     "subsink": "^1.0.2",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.3",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "^12.0.3",
-    "@types/jasmine": "^3.6.4",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/luxon": "^1.26.1",
-    "@types/node": "^12.20.4",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/cli": "^12.0.5",
+    "@angular/compiler-cli": "^12.1.4",
+    "@types/jasmine": "^3.8.2",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/luxon": "^1.27.1",
+    "@types/node": "^12.20.17",
+    "codelyzer": "^6.0.2",
     "husky": "^2.4.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
@@ -58,8 +58,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.0",
-    "webpack-bundle-analyzer": "^4.4.0"
+    "typescript": "^4.3.5",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "husky": {
     "hooks": {
