--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.4.4",
+    "typescript": "4.2.3",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "husky": {
