--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "e2e": "ng e2e",
     "sonar": "sonar-scanner",
     "build:stats": "ng build --stats-json",
+    "compodoc": "npx compodoc -p tsconfig.doc.json",
     "build:analyze": "webpack-bundle-analyzer dist/c-metrics/stats.json",
     "pretty-quick": "pretty-quick",
-    "prettier": "prettier --write src/**/*.{ts,html,scss}"
+    "prettier": "prettier --write src/**/*.{ts,html,scss}",
+    "compodoc:build": "compodoc -p tsconfig.doc.json",
+    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
+    "compodoc:serve": "compodoc -s"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +31,7 @@
     "@angular/platform-browser-dynamic": "^14.2.3",
     "@angular/router": "^14.2.3",
     "@angular/service-worker": "^14.2.3",
+    "@compodoc/compodoc": "^1.1.19",
     "luxon": "^1.28.0",
     "ng-connection-service": "^1.0.4",
     "rxjs": "^6.6.6",
